Fixed overflow on mobile and auto-focus on mobile

--- a/app/src/pages/lessons/lessons.style.scss
+++ b/app/src/pages/lessons/lessons.style.scss
@@ -78,6 +78,7 @@
 
 @media (max-width: 480px) {
   .lessons {
+    display: block;
     height: auto;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto 1fr auto;
@@ -85,6 +86,10 @@
     .main {
       .container--previous-lessons {
         height: unset;
+
+        .container--tabs {
+          flex-wrap: wrap;
+        }
       }
       .container--lessons {
         .container--two-rows {
